[gd_scene load_steps=42 format=3 uid="uid://bwu8f0i3671e5"]

[ext_resource type="Texture2D" uid="uid://4tsrvrl7mycm" path="res://assets/background/background.jpg" id="1_8eo2g"]
[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_t02xh"]
[ext_resource type="Texture2D" uid="uid://vp38qy8gybyr" path="res://assets/ui/logo.png" id="2_7hyop"]
[ext_resource type="Texture2D" uid="uid://dx3rsevufgjl6" path="res://assets/buttons/png/Play (3).png" id="3_2764f"]
[ext_resource type="Texture2D" uid="uid://dmgq50dhijlnc" path="res://assets/buttons/png/MoreGames (1).png" id="4_tr65n"]
[ext_resource type="Texture2D" uid="uid://dx4jg18odx5u0" path="res://assets/buttons/png/Exit (2).png" id="5_a2b6k"]
[ext_resource type="Texture2D" uid="uid://d18aqb0qowc6l" path="res://assets/buttons/png/Play (2).png" id="5_b17k1"]
[ext_resource type="Texture2D" uid="uid://dynk1x1r1u5tp" path="res://assets/buttons/png/Play (1).png" id="6_v687a"]
[ext_resource type="Texture2D" uid="uid://cj7dr78cowafn" path="res://assets/buttons/png/Blank/Text (1).png" id="7_7snsk"]
[ext_resource type="FontFile" uid="uid://ce5f6h0feelp3" path="res://assets/fonts/Milky Mania.otf" id="8_vjrbe"]
[ext_resource type="Texture2D" uid="uid://bro18fh13vb1b" path="res://assets/buttons/png/Blank/Text (3).png" id="9_kgpde"]
[ext_resource type="Texture2D" uid="uid://bjqi3fd0afunr" path="res://assets/buttons/png/Blank/Text (2).png" id="10_ld3op"]
[ext_resource type="Texture2D" uid="uid://sn4ucm00diw2" path="res://assets/buttons/png/Music (2).png" id="11_0ykgi"]
[ext_resource type="Texture2D" uid="uid://b52bmkmmw0ln8" path="res://assets/buttons/png/Music (4).png" id="12_vn8xu"]
[ext_resource type="Texture2D" uid="uid://cdrn8g07jrtm5" path="res://assets/buttons/png/Sound (1).png" id="13_5k7ch"]
[ext_resource type="Texture2D" uid="uid://bh45sf31jm2s8" path="res://assets/buttons/png/Sound (4).png" id="14_qstbd"]
[ext_resource type="Texture2D" uid="uid://cor74ibhcdeh" path="res://assets/buttons/png/Info (2).png" id="17_88dub"]
[ext_resource type="Texture2D" uid="uid://burekj112gccu" path="res://assets/buttons/png/Info (3).png" id="18_bnufq"]
[ext_resource type="Texture2D" uid="uid://fgelm2y8m876" path="res://assets/buttons/png/Info (1).png" id="19_affo8"]
[ext_resource type="Texture2D" uid="uid://c507jkkvb04v2" path="res://assets/buttons/png/Profile (1).png" id="20_0ba3o"]
[ext_resource type="Texture2D" uid="uid://cqr356axkpoq8" path="res://assets/ui/ui_rect.png" id="20_8cx0n"]
[ext_resource type="Texture2D" uid="uid://bkuk4kmjxu3a4" path="res://assets/buttons/png/Twitter (1).png" id="20_jg5vf"]
[ext_resource type="Texture2D" uid="uid://cce7twd2u5s5w" path="res://assets/buttons/png/Profile (3).png" id="21_ek1ex"]
[ext_resource type="Texture2D" uid="uid://7vlyldawsh8f" path="res://assets/buttons/png/Twitter (2).png" id="21_qn1j3"]
[ext_resource type="Texture2D" uid="uid://dym8p2reycfht" path="res://assets/buttons/png/Back (2).png" id="21_u0tv6"]
[ext_resource type="Texture2D" uid="uid://d1yqc6q7aabc4" path="res://assets/buttons/png/Back (1).png" id="22_0kc8u"]
[ext_resource type="Texture2D" uid="uid://bvvpxg7bwwk4m" path="res://assets/buttons/png/Twitter (3).png" id="22_f5yob"]
[ext_resource type="Texture2D" uid="uid://bjxhnkf2g3qeu" path="res://assets/buttons/png/Profile (2).png" id="22_jrxm5"]
[ext_resource type="Texture2D" uid="uid://bj7olqjkw1s2s" path="res://assets/buttons/png/Leaderboard (3).png" id="23_eexy2"]
[ext_resource type="Texture2D" uid="uid://cjh1sjqhss5sa" path="res://assets/buttons/png/Back (3).png" id="23_hhu31"]
[ext_resource type="Texture2D" uid="uid://xqsjpb71js6g" path="res://assets/buttons/png/Leaderboard (1).png" id="24_3f6do"]
[ext_resource type="Texture2D" uid="uid://bbfve4jw4vv7j" path="res://assets/buttons/png/Back (4).png" id="24_x1tti"]
[ext_resource type="Texture2D" uid="uid://b6fa21nws5nsq" path="res://assets/buttons/png/Leaderboard (2).png" id="25_77vea"]
[ext_resource type="Texture2D" uid="uid://dumaueyhif5c3" path="res://assets/buttons/png/Leaderboard (4).png" id="29_cus0c"]

[sub_resource type="Animation" id="Animation_vsdbn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(537, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Buttons/Play:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_jvlqg"]
resource_name = "logo"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(537, 32), Vector2(537, 45.692), Vector2(537, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bmgdo"]
_data = {
"RESET": SubResource("Animation_vsdbn"),
"logo": SubResource("Animation_jvlqg")
}

[sub_resource type="Animation" id="Animation_xwldd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Play:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_oelbl"]
resource_name = "play_button"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Play:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_thc0c"]
_data = {
"RESET": SubResource("Animation_xwldd"),
"play_button": SubResource("Animation_oelbl")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yaalt"]
bg_color = Color(0.941176, 0.482353, 0.768627, 0.411765)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t02xh")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1500, 1000)
texture = ExtResource("1_8eo2g")
metadata/_edit_lock_ = true

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -263.0
offset_top = 32.0
offset_right = 263.0
offset_bottom = 468.0
grow_horizontal = 2
texture = ExtResource("2_7hyop")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.560784)
theme_override_font_sizes/font_size = 30
text = "V1.6"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Logo")
libraries = {
"": SubResource("AnimationLibrary_bmgdo")
}

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons"]
libraries = {
"": SubResource("AnimationLibrary_thc0c")
}

[node name="Play" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 704.0
offset_top = 509.0
offset_right = 904.0
offset_bottom = 764.0
texture_normal = ExtResource("3_2764f")
texture_pressed = ExtResource("5_b17k1")
texture_hover = ExtResource("6_v687a")
ignore_texture_size = true
stretch_mode = 4

[node name="MoreGames" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = 59.0
offset_right = -256.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "More Games!"
texture_normal = ExtResource("4_tr65n")
ignore_texture_size = true
stretch_mode = 4

[node name="Quit" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 256.0
offset_top = 59.0
offset_right = 456.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Quit the game!"
texture_normal = ExtResource("5_a2b6k")
ignore_texture_size = true
stretch_mode = 4
flip_h = true

[node name="Achievements" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 294.0
offset_top = 729.0
offset_right = 600.0
offset_bottom = 877.0
texture_normal = ExtResource("7_7snsk")
texture_hover = ExtResource("10_ld3op")

[node name="Label" type="Label" parent="Buttons/Achievements"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0.360784, 0, 1)
theme_override_colors/font_outline_color = Color(0.133333, 0.631373, 0.392157, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("8_vjrbe")
theme_override_font_sizes/font_size = 47
text = "Achievements
üèÜ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RateButton" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 654.0
offset_top = 729.0
offset_right = 960.0
offset_bottom = 877.0
tooltip_text = "Please rate our game to support us! üòä"
texture_normal = ExtResource("9_kgpde")
texture_pressed = ExtResource("10_ld3op")
texture_hover = ExtResource("7_7snsk")

[node name="Label" type="Label" parent="Buttons/RateButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.418434, 0.0365622, 0.256822, 1)
theme_override_colors/font_outline_color = Color(0.780392, 0.101961, 0.462745, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("8_vjrbe")
theme_override_font_sizes/font_size = 42
text = "Rate our
game! üòä"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DonateButton" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 1014.0
offset_top = 729.0
offset_right = 1320.0
offset_bottom = 877.0
tooltip_text = "Buy us a coffee, or candies! whichever you like! ;)"
texture_normal = ExtResource("10_ld3op")
texture_pressed = ExtResource("7_7snsk")
texture_hover = ExtResource("9_kgpde")

[node name="Label" type="Label" parent="Buttons/DonateButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.420073, 0.123024, 0.0178619, 1)
theme_override_colors/font_outline_color = Color(1, 0.298039, 0.141176, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("8_vjrbe")
theme_override_font_sizes/font_size = 42
text = "Donate us!
‚òï"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -178.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 179.0
grow_horizontal = 0
tooltip_text = "Toggle Music ON/OFF"
toggle_mode = true
texture_normal = ExtResource("11_0ykgi")
texture_pressed = ExtResource("12_vn8xu")

[node name="Sound" type="TextureButton" parent="Buttons"]
layout_mode = 1
offset_left = 32.0
offset_top = 32.0
offset_right = 178.0
offset_bottom = 179.0
tooltip_text = "Toggle Sound ON/OFF"
toggle_mode = true
texture_normal = ExtResource("13_5k7ch")
texture_pressed = ExtResource("14_qstbd")

[node name="HowToPlay" type="TextureButton" parent="Buttons"]
layout_mode = 1
offset_left = 32.0
offset_top = 200.0
offset_right = 179.0
offset_bottom = 348.0
tooltip_text = "How to Play? ü§î"
texture_normal = ExtResource("17_88dub")
texture_pressed = ExtResource("18_bnufq")
texture_hover = ExtResource("19_affo8")

[node name="Label" type="Label" parent="Buttons/HowToPlay"]
layout_mode = 0
offset_left = 128.0
offset_top = 95.0
offset_right = 392.0
offset_bottom = 177.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.658824, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("8_vjrbe")
theme_override_font_sizes/font_size = 35
text = "<< How to Play?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Twitter" type="TextureButton" parent="Buttons"]
layout_mode = 1
offset_left = 216.0
offset_top = 40.0
offset_right = 363.0
offset_bottom = 188.0
tooltip_text = "How to Play? ü§î"
texture_normal = ExtResource("20_jg5vf")
texture_pressed = ExtResource("21_qn1j3")
texture_hover = ExtResource("22_f5yob")

[node name="Label" type="Label" parent="Buttons/Twitter"]
layout_mode = 0
offset_left = -20.0
offset_top = 152.0
offset_right = 179.0
offset_bottom = 234.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0443958, 0.457164, 0.59346, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("8_vjrbe")
theme_override_font_sizes/font_size = 35
text = "Follow us
on X!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PlayerButton" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -179.0
offset_top = 200.0
offset_right = -32.0
offset_bottom = 348.0
grow_horizontal = 0
tooltip_text = "Edit Player Info!"
texture_normal = ExtResource("20_0ba3o")
texture_pressed = ExtResource("21_ek1ex")
texture_hover = ExtResource("22_jrxm5")

[node name="LeaderboardButton" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -354.0
offset_top = 32.0
offset_right = -208.0
offset_bottom = 179.0
grow_horizontal = 0
tooltip_text = "See Leaderboard!"
texture_normal = ExtResource("23_eexy2")
texture_pressed = ExtResource("24_3f6do")
texture_hover = ExtResource("25_77vea")
texture_disabled = ExtResource("29_cus0c")

[node name="Label" type="Label" parent="Buttons/LeaderboardButton"]
layout_mode = 0
offset_left = -182.0
offset_top = 156.0
offset_right = 161.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.654902, 0, 0.364706, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("8_vjrbe")
theme_override_font_sizes/font_size = 35
text = "*Leaderboard*
(Not available in Android and web)"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="HighscoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -331.0
offset_top = -80.0
offset_right = -32.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.690196, 0, 0.392157, 1)
theme_override_fonts/font = ExtResource("8_vjrbe")
theme_override_font_sizes/font_size = 50
text = "My Best Score:
1000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WelcomeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1577.0
offset_top = -80.0
offset_right = -1278.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.180392, 0.384314, 0.639216, 1)
theme_override_fonts/font = ExtResource("8_vjrbe")
theme_override_font_sizes/font_size = 50
text = "Welcome
Player!"
vertical_alignment = 1

[node name="Overlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.368627)

[node name="PlayerUI" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.5
offset_top = -287.5
offset_right = 448.5
offset_bottom = 287.5
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("20_8cx0n")

[node name="EnterName" type="Label" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -330.0
offset_top = -150.5
offset_right = 330.0
offset_bottom = -73.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.713726, 0.917647, 0, 1)
theme_override_colors/font_outline_color = Color(0.898039, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("8_vjrbe")
theme_override_font_sizes/font_size = 70
text = "Please enter your name:"

[node name="TextEdit" type="TextEdit" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.5
offset_top = -39.0
offset_right = 293.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.529412, 0.0431373, 1, 1)
theme_override_colors/caret_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_vjrbe")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_yaalt")
placeholder_text = "Click to Enter"
caret_blink = true
caret_blink_interval = 0.86

[node name="SubmitButton" type="TextureButton" parent="PlayerUI"]
layout_mode = 0
offset_left = 148.0
offset_top = 359.0
offset_right = 410.0
offset_bottom = 486.0
texture_normal = ExtResource("7_7snsk")
texture_pressed = ExtResource("9_kgpde")
texture_hover = ExtResource("10_ld3op")
ignore_texture_size = true
stretch_mode = 6

[node name="Label" type="Label" parent="PlayerUI/SubmitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.117647, 0, 1)
theme_override_colors/font_outline_color = Color(0.0627451, 0.290196, 0.2, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("8_vjrbe")
theme_override_font_sizes/font_size = 50
text = "Save"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClearButton" type="TextureButton" parent="PlayerUI"]
layout_mode = 0
offset_left = 492.0
offset_top = 359.0
offset_right = 754.0
offset_bottom = 486.0
texture_normal = ExtResource("10_ld3op")
texture_pressed = ExtResource("7_7snsk")
texture_hover = ExtResource("9_kgpde")
ignore_texture_size = true
stretch_mode = 6

[node name="Label" type="Label" parent="PlayerUI/ClearButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.164706, 0.0509804, 0.027451, 1)
theme_override_colors/font_outline_color = Color(0.882353, 0.105882, 0.2, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("8_vjrbe")
theme_override_font_sizes/font_size = 50
text = "Clear"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="TextureButton" parent="PlayerUI"]
layout_mode = 0
offset_left = 29.0
offset_top = 29.0
offset_right = 128.0
offset_bottom = 128.0
texture_normal = ExtResource("21_u0tv6")
texture_pressed = ExtResource("22_0kc8u")
texture_hover = ExtResource("23_hhu31")
texture_disabled = ExtResource("24_x1tti")
ignore_texture_size = true
stretch_mode = 5

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Buttons/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="button_down" from="Buttons/MoreGames" to="." method="_on_more_games_button_down"]
[connection signal="mouse_entered" from="Buttons/MoreGames" to="." method="_on_more_games_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/MoreGames" to="." method="_on_more_games_mouse_exited"]
[connection signal="pressed" from="Buttons/MoreGames" to="." method="_on_more_games_pressed"]
[connection signal="button_down" from="Buttons/Quit" to="." method="_on_quit_button_down"]
[connection signal="mouse_entered" from="Buttons/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Buttons/Achievements" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="Buttons/RateButton" to="." method="_on_rate_button_pressed"]
[connection signal="pressed" from="Buttons/DonateButton" to="." method="_on_donate_button_pressed"]
[connection signal="toggled" from="Buttons/Music" to="." method="_on_music_toggled"]
[connection signal="toggled" from="Buttons/Sound" to="." method="_on_sound_toggled"]
[connection signal="pressed" from="Buttons/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="Buttons/Twitter" to="." method="_on_twitter_pressed"]
[connection signal="pressed" from="Buttons/PlayerButton" to="." method="_on_player_button_pressed"]
[connection signal="pressed" from="Buttons/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="PlayerUI/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="PlayerUI/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="PlayerUI/CloseButton" to="." method="_on_close_button_pressed"]
